--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .header-container-navigation #current-submit {
-  border: 2px solid #5186bb;
+  border: 1px solid #5186bb;
   background: rgba(160, 205, 250, 0.6);
 }
 
@@ -38,7 +38,7 @@ body {
 }
 
 .header-container-navigation #search-submit {
-  border: 2px solid #82ac59;
+  border: 1px solid #82ac59;
   background: rgba(183, 228, 140, 0.6);
 }
 
@@ -54,7 +54,7 @@ body {
 .header-container-navigation .search-area {
   padding: 5px 40px 5px 5px;
   background-color: rgba(230, 230, 230, 0.6);
-  border: 2px solid gray;
+  border: 1px solid gray;
   border-radius: 5px;
 }
 
@@ -108,8 +108,9 @@ hr {
 }
 
 .forecast-container {
-  margin: 10px 8px;
+  margin: 10px 0;
 }
+
 .forecast-container .col {
   text-align: center;
   padding: 0 8px;
